--- a/FE/package.json
+++ b/FE/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "15": "^0.0.0",
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@emotion/styled": "^11.13.0",
     "@files-ui/react": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
@@ -46,6 +49,7 @@
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "react-sparklines": "^1.7.0",
+    "react-spinners": "^0.14.1",
     "react-table": "^7.8.0",
     "react-time-picker": "^6.6.0",
     "react-toastify": "^9.1.3",
