--- a/FE/package.json
+++ b/FE/package.json
@@ -62,6 +62,7 @@
     "sweetalert2": "^11.10.2",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4",
+    "yahoo-finance2": "^2.11.3",
     "yup": "^1.3.3"
   },
   "scripts": {
