--- a/FE/package.json
+++ b/FE/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "jiade",
+  "name": "fintch",
   "version": "0.1.0",
   "private": true,
+  "main": "public/main.js",
+  "homepage": "./",
   "dependencies": {
     "15": "^0.0.0",
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@emotion/styled": "^11.13.0",
     "@files-ui/react": "^1.2.4",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@fullcalendar/daygrid": "^6.1.8",
@@ -23,6 +26,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
+    "concurrently": "^9.0.0",
+    "cross-env": "^7.0.3",
     "formik": "^2.4.3",
     "lightgallery": "^2.7.1",
     "p-min-delay": "^4.0.2",
@@ -61,6 +66,7 @@
     "sass": "^1.77.8",
     "sweetalert2": "^11.10.2",
     "swiper": "^11.0.5",
+    "wait-on": "^8.0.1",
     "web-vitals": "^2.1.4",
     "yahoo-finance2": "^2.11.3",
     "yup": "^1.3.3"
@@ -71,7 +77,23 @@
     "test": "react-scripts test",
     "build:css": "postcss src/assets/css/stylemain.css -d dist/css",
     "eject": "react-scripts eject",
-    "sass": "node-sass --watch src/assets/scss/main.scss src/assets/css/style.css --source-map src/assets/css/style.css.map"
+    "sass": "node-sass --watch src/assets/scss/main.scss src/assets/css/style.css --source-map src/assets/css/style.css.map",
+    "electron-dev": "electron .",
+    "electron:serve": "concurrently -k \"cross-env BROWSER=none yarn start \" \"yarn electron:start\" ",
+    "electron:build": " electron-builder ",
+    "electron:start": "wait-on http://127.0.0.1:3000 && electron ."
+  },
+  "build": {
+    "extends": null,
+    "appId": "com.electron.trackerR324",
+    "files": [
+      "dist/**/*",
+      "build/**/*",
+      "public/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -92,7 +114,14 @@
     ]
   },
   "devDependencies": {
+    "electron": "^32.0.2",
+    "electron-builder": "^25.0.5",
     "postcss-cli": "^11.0.0",
-    "postcss-prefix-selector": "^1.16.1"
-  }
+    "postcss-prefix-selector": "^1.16.1",
+    "electron-is-dev": "^3.0.1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
